[tool.poetry]
name = "opengo"
version = "0.1.0"
description = ""
authors = ["ALEX PEREIRA MARANHÃO <alexperei365@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {extras = ["srv"], version = "^4.10.1"}
requests = "^2.32.3"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
flask = "^3.0.3"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
